리뷰(피드) - 추천, 팔로우 피드 조회 구현

--- a/src/main/resources/templates/review/review.html
+++ b/src/main/resources/templates/review/review.html
@@ -226,6 +226,12 @@
             animation: loader 500ms linear infinite;
         }
 
+        @keyframes loader {
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
 
     </style>
 
@@ -884,7 +890,7 @@
             pagination: {
                 el: `.swiper-pagination${num}`,
             },
-            mousewheel: true,
+            mousewheel: false,
             keyboard: false,
         });
         simpleViewSwiper.push(swiper);
@@ -920,9 +926,9 @@
                 case "RECOMMEND" :
                     showRecommend();
                     break;
-                // case "FOLLOW" :
-                //     showFollowReview();
-                //     break;
+                case "FOLLOW" :
+                    showFollowReview();
+                    break;
             }
         });
     });
@@ -935,6 +941,7 @@
         scrollCheck = false;
         firstLoad = true;
         back = false;
+        simpleViewSwiper = [];
 
         if(type === 'RECOMMEND'){
             fromDate = new Date().toISOString();
@@ -986,8 +993,6 @@
 
                             let photoLength = review.reviewPhotoList.length;
 
-                            createSimpleViewSwiper(photoLength, num);
-
                             let tempHtml =
                                 '<div class="card gallery-item">' +
                                 '<div class="d-flex card-header gap-2">' +
@@ -1034,6 +1039,117 @@
                                     '</div>';
 
                             gallery.append(tempHtml).trigger("create")
+
+                            createSimpleViewSwiper(photoLength, num);
+                        })
+                        window.scrollTo({top: loadScroll, behavior: "instant"});
+                    }, time)
+                    if(reviewList.length < 12){
+                        // 다음페이지가 없다면 관측을 종료
+                        observer.unobserve(document.getElementById('load-point'));
+                    }
+                }
+            },
+            error : function (err) {
+                console.log(err)
+            },
+            beforeSend : function () {
+                scrollCheck = true;
+                $(".loader").show()
+                loadScroll = window.scrollY;
+            },
+            complete : function () {
+                scrollCheck = false;
+            }
+        })
+    }
+
+    function showFollowReview() {
+        let time = 500;  // 페이지 로딩 시 로더를 일정시간 이상 보여주기 위한 시간 지정
+        let loadScroll; // 다음 페이지 로딩 후에도 유지할 스크롤 위치를 저장할 변수
+        if(!firstLoad){
+            scrollPage += 1;
+        }
+        if(firstLoad || back) {
+            time = 0;
+            back = false;
+        }
+        $.ajax({
+            url : '/api/review/follow',
+            type : 'GET',
+            data : {
+                page : scrollPage
+            },
+            async: false,
+            success : function (result) {
+                let reviewList = result.dtoList;
+
+                if(firstLoad && reviewList.length <= 0){
+                    firstLoad = false;
+                    $(".loader").hide()
+                    let messageHtml = '<div class="no-data-msg mt-5">' +
+                        '<h4>등록된 리뷰가 없습니다.</h4>' +
+                        '</div>';
+                    gallery.append(messageHtml);
+                }else {
+                    firstLoad = false;
+                    // 로더를 일정시간 이상 노출하기 위한 setTimeout
+                    setTimeout(() => {
+                        $(".loader").hide()
+                        $.each(reviewList, function (index, review){
+                            let profileImg = review.userInfo.profileImg == null ? '../assets/img/profile.jpg' : '/api/image/profile/' + review.userInfo.profileImg;
+                            let num = (result.page * 10) + index;
+
+                            let photoLength = review.reviewPhotoList.length;
+
+                            let tempHtml =
+                                '<div class="card gallery-item">' +
+                                '<div class="d-flex card-header gap-2">' +
+                                `<img src="${profileImg}" class="rounded-circle">` +
+                                `<span>${review.userInfo.name}</span>` +
+                                `<span>@${review.userInfo.id}</span>` +
+                                '</div>' +
+                                '<div class="card-body">' +
+                                `<div class="swiper simple-view-swiper simple-view-swiper${num}">` +
+                                '<div class="swiper-wrapper">';
+
+                            $.each(review.reviewPhotoList, function (index, photo){
+                                let slide =
+                                    '<div class="swiper-slide">' +
+                                    `<img class="simple-view-img" src="/api/image/review/${photo.filePath}"/>` +
+                                    '</div>';
+                                tempHtml += slide;
+                            })
+
+                            tempHtml +=
+                                '</div>' +
+                                `<div class="swiper-controller swiper-controller${num}">` +
+                                `<div class="swiper-button-next swiper-button-next${num}"></div>` +
+                                `<div class="swiper-button-prev swiper-button-prev${num}"></div>` +
+                                `<div class="swiper-pagination swiper-pagination${num}"></div>` +
+                                '</div>' +
+                                '</div>' +
+                                '<div class="review-icons d-flex gap-3">' +
+                                `<i class="bi bi-chat-square-dots" onClick="goComment(${review.reviewId})"></i>`;
+
+                            if(review.likeState){
+                                tempHtml += `<i class="like-btn bi bi-star-fill" data-review-id="${review.reviewId}"></i>`
+                            }else {
+                                tempHtml += `<i class="like-btn bi bi-star" data-review-id="${review.reviewId}"></i>`
+                            }
+
+                            tempHtml +=
+                                '</div>' +
+                                `<p class="like-count text-muted card-text" data-review-id="${review.reviewId}">${review.likeCount} 명이 이 리뷰를 좋아합니다.</p>` +
+                                `<div class="review-content">${review.reviewContent}</div>` +
+                                `<div class="card-text"><small class="text-muted comment-count" data-review-id="${review.reviewId}">댓글 ${review.commentCount}개</small></div>` +
+                                `<div class="card-text show-more" onClick="openViewer(${review.reviewId})"><small class="text-muted">자세히 보기</small></div>` +
+                                '</div>' +
+                                '</div>';
+
+                            gallery.append(tempHtml).trigger("create")
+
+                            createSimpleViewSwiper(photoLength, num);
                         })
                         window.scrollTo({top: loadScroll, behavior: "instant"});
                     }, time)
@@ -1081,9 +1197,9 @@
                 case "RECOMMEND":
                     showRecommend();
                     break;
-                // case "FOLLOW":
-                //     showFollowReview();
-                //     break;
+                case "FOLLOW":
+                    showFollowReview();
+                    break;
             }
         }
         setTimeout(() => {
