--- a/src/main/resources/templates/review/reviewbook.html
+++ b/src/main/resources/templates/review/reviewbook.html
@@ -673,7 +673,7 @@
                 pagination: {
                     el: `.swiper-pagination${idx}`,
                 },
-                mousewheel: true,
+                mousewheel: false,
                 keyboard: false,
             });
             simpleViewSwiper.push(swiper);
