[수정] 팔로우,팔로잉 리스트 기능 수정 완료

--- a/src/main/resources/static/assets/css/mypagestyle.css
+++ b/src/main/resources/static/assets/css/mypagestyle.css
@@ -407,7 +407,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
     .profile-user-settings .unfollow-btn,
     .profile-user-settings .follow-btn {
         display: inline-block;
-        padding: 7px;
+        padding: 7px 15px;
         margin: 0 0 1rem 1rem;
     }
 }
